RESOLVED FIXED 256141
AX: Slotted elements inside dialog and aria-modal are not accessible
https://bugs.webkit.org/show_bug.cgi?id=256141
Summary AX: Slotted elements inside dialog and aria-modal are not accessible
Tyler Wilcock
Reported 2023-04-29 18:41:22 PDT
Attachments
Patch (12.73 KB, patch)
2023-04-29 19:14 PDT, Tyler Wilcock
ews-feeder: commit-queue-
Patch (13.76 KB, patch)
2023-04-29 21:15 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-04-29 18:41:35 PDT
Tyler Wilcock
Comment 2 2023-04-29 19:14:40 PDT
Tyler Wilcock
Comment 3 2023-04-29 21:15:02 PDT
EWS
Comment 4 2023-05-01 14:57:47 PDT
Committed 263561@main (6bad1368d570): <https://commits.webkit.org/263561@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466146 [details].
Note You need to log in before you can comment on or make changes to this bug.