Source/WebCore/accessibility/AccessibilityRenderObject.h
@@ -115,7 +115,6 @@ public:
 
     void setSelectedTextRange(const PlainTextRange&) override;
     bool setValue(const String&) override;
-    void setSelectedRows(AccessibilityChildrenVector&) override;
 
     void addChildren() override;
     bool canHaveChildren() const override;
